Add roll check, reason the turn change, minor changes

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
         <button class="" id="scoreButton">Confirm!</button>
         <input type="number" id="inputForScores" id="player-0-input" placeholder="Enter Scores" >
         <div class="player-0-panel active">
-
             <div class="player-name" id="name-0">Player 1</div>
             <div class="player-score" id="score-0">43</div>
             <div class="player-current-box">
                 <div class="player-current-label">Current</div>
                 <div class="player-current-score" id="current-0">11</div>
             </div>
+            <p class="diceReason reason-0"></p>
+
         </div>
 
         <div class="player-1-panel">
@@ -36,6 +37,8 @@
                 <div class="player-current-label">Current</div>
                 <div class="player-current-score" id="current-1">0</div>
             </div>
+            <p class="diceReason reason-1 "></p>
+
         </div>
 
         <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
