--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="wrapper clearfix">
         <button class="" id="scoreButton">Confirm!</button>
-        <input type="number" id="inputForScores" id="player-0-input" placeholder="Enter Scores" >
+        <input type="number" id="inputForScores" placeholder="Enter Scores" >
         <div class="player-0-panel active">
             <div class="player-name" id="name-0">Player 1</div>
             <div class="player-score" id="score-0">43</div>
